--- a/starter/test.html
+++ b/starter/test.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Travel App</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta charset="UTF-8">
+	<title>My Travel App</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<header>
 		<nav>
 			<ul>
-				<li><a href="#">Home</a></li>
 				<li><a href="#">Hotels</a></li>
 				<li><a href="#">Flights</a></li>
 				<li><a href="#">Activities</a></li>
 				<li><a href="#">Cars</a></li>
 			</ul>
-			<div class="signin">
-				<a href="#">Sign In</a>
-			</div>
+			<a href="#" class="signin">Sign In</a>
 		</nav>
-		<div class="hero">
-			<h1>Plan your perfect trip</h1>
-			<form>
-				<input type="text" placeholder="Enter your destination">
+		<div class="search-container">
+			<h1>Find Your Next Destination</h1>
+			<form action="#" method="get">
+				<input type="text" name="destination" placeholder="Enter your destination">
 				<button type="submit">Search</button>
 			</form>
 		</div>
 	</header>
 	<main>
-		<aside>
-		</aside>
-		<section>
-			<div class="slideshow">
-				<img src="https://picsum.photos/800/600?random=1" alt="Random Image">
-			</div>
-		</section>
+		<div class="image-container">
+			<img src="https://picsum.photos/325/350?random=1" alt="random image">
+			<img src="https://picsum.photos/325/350?random=2" alt="random image">
+			<img src="https://picsum.photos/325/350?random=3" alt="random image">
+			<img src="https://picsum.photos/325/350?random=4" alt="random image">
+		</div>
 	</main>
+	<footer>
+		<p>&copy; 2023 My Travel App</p>
+	</footer>
 </body>
 </html>
